--- a/frontend/src/pages/Questions.css
+++ b/frontend/src/pages/Questions.css
@@ -1,10 +1,11 @@
 .events-control{
     text-align: center;
-    border: 1px solid rgb(10, 206, 141);
+    border: 3px solid rgb(10, 206, 141);
     padding: rem;
     margin: 2rem auto;
-    width: 30rem;
+    width: 22rem;
     max-width: 80%;
+    border-radius: 10px;
 }
 
 .backdrop{
@@ -14,4 +15,8 @@
     height: 100vh;
     width: 100%;
     background: rgba(0, 0, 0, 0.75);
+}
+
+#create-question{
+    margin-bottom: 0.5rem;
 }
